--- a/.github/workflows/motion.yml
+++ b/.github/workflows/motion.yml
@@ -1,10 +1,11 @@
 name: motion
 
-# Actualisation du flux á la 57 ème minute à 9 heures et 21 heures.
+# Actualisation du flux á la 44ème minute toutes les 3 heures. 
 on:
-#  schedule:
-   # - cron: '57 9,21 * * *'
-    
+  schedule:
+    - cron: '44 */3 * * *'
+
+  # Permet d'exécuter ce flux de travail manuellement à partir de l'onglet Actions
   workflow_dispatch:
 
 permissions:
