--- a/.github/workflows/lequipe.yml
+++ b/.github/workflows/lequipe.yml
@@ -35,7 +35,7 @@ jobs:
       - name: actualisation des flux
         run: |
           pwd
-          # cd ./lequipe/
+          cd ./lequipe/
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/x2lefik" > lequipe.m3u8
           sleep 15
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
