--- a/.github/workflows/lequipe.yml
+++ b/.github/workflows/lequipe.yml
@@ -39,14 +39,14 @@ jobs:
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/x2lefik" > lequipe.m3u8
           sleep 15
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
-          sleep 15
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5TgcOKBUTM2KnqwBWC" > lequipe2.m3u8
-          sleep 15
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5s40USR9HxnG5aCf1y" > lequipe3.m3u8
-          sleep 15
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/kXRfcKHV9HhcZuqwBYP" > lequipe4.m3u8
-          sleep 15
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k6oih7JyuEmhrnqwBZT" > lequipe5.m3u8
+        #  sleep 15
+       #   python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5TgcOKBUTM2KnqwBWC" > lequipe2.m3u8
+        #  sleep 15
+        #  python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5s40USR9HxnG5aCf1y" > lequipe3.m3u8
+        #  sleep 15
+        #  python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/kXRfcKHV9HhcZuqwBYP" > lequipe4.m3u8
+        #  sleep 15
+         # python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k6oih7JyuEmhrnqwBZT" > lequipe5.m3u8
 
 
       # Informer Git que vous voulez inclure les mises à jour dans un fichier.
