--- a/.github/workflows/lequipe.yml
+++ b/.github/workflows/lequipe.yml
@@ -37,8 +37,8 @@ jobs:
           pwd
           cd ./lequipe/
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/x2lefik" > lequipe.m3u8
-          sleep 15
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
+        #  sleep 15
+         # python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
         #  sleep 15
        #   python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5TgcOKBUTM2KnqwBWC" > lequipe2.m3u8
         #  sleep 15
