--- a/.github/workflows/lequipe.yml
+++ b/.github/workflows/lequipe.yml
@@ -2,8 +2,8 @@ name: l'équipe directs
 
 # # Actualisation du flux toutes les 3 heures. 
 on:
-  schedule:
-    - cron: '0 0/3 * * *'
+ # schedule:
+  #  - cron: '0 0/3 * * *'
 
   # Permet d'exécuter ce flux de travail manuellement à partir de l'onglet Actions
   workflow_dispatch:
@@ -38,11 +38,11 @@ jobs:
           pwd
           cd ./lequipe/
           python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/x2lefik" > lequipe.m3u8
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5TgcOKBUTM2KnqwBWC" > lequipe2.m3u8
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5s40USR9HxnG5aCf1y" > lequipe3.m3u8
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/kXRfcKHV9HhcZuqwBYP" > lequipe4.m3u8
-          python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k6oih7JyuEmhrnqwBZT" > lequipe5.m3u8
+          #python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k1kypsRZF9plQhqwBRS" > lequipe1.m3u8
+         # python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5TgcOKBUTM2KnqwBWC" > lequipe2.m3u8
+         # python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k5s40USR9HxnG5aCf1y" > lequipe3.m3u8
+         # python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/kXRfcKHV9HhcZuqwBYP" > lequipe4.m3u8
+        #  python3 lequipe.py "https://www.dailymotion.com/player/metadata/video/k6oih7JyuEmhrnqwBZT" > lequipe5.m3u8
 
 
       # Informer Git que vous voulez inclure les mises à jour dans un fichier.
