--- a/.github/workflows/lequipe.yml
+++ b/.github/workflows/lequipe.yml
@@ -2,8 +2,8 @@ name: l'équipe directs
 
 # Actualisation du flux toutes les 3 heures. 
 on:
-  schedule:
-    - cron: '0 0/3 * * *'
+ # schedule:
+  #  - cron: '0 0/3 * * *'
     
   workflow_dispatch:
 
