--- a/.github/workflows/motion.yml
+++ b/.github/workflows/motion.yml
@@ -41,7 +41,7 @@ jobs:
           sleep 15
           python3 motion.py "http://s2.callofliberty.fr/direct/C8/master.m3u8" > c8.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/CSTAR/master.m3u8" > cstar.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/direct/CSTAR/index.m3u8" > cstar.m3u8
           sleep 15
           python3 motion.py "http://s2.callofliberty.fr/direct/PublicSenat/master.m3u8" > senat.m3u8
          
