--- a/.github/workflows/motion.yml
+++ b/.github/workflows/motion.yml
@@ -37,9 +37,9 @@ jobs:
           pwd
           python3 motion.py "http://s2.callofliberty.fr/direct/LEQUIPE/manifest.m3u8" > lequipe.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/LCP/master.m3u8" > lcp.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/direct/LCP/manifest.m3u8" > lcp.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/C8/master.m3u8" > c8.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/direct/C8/index.m3u8" > c8.m3u8
           sleep 15
           python3 motion.py "http://s2.callofliberty.fr/direct/CSTAR/index.m3u8" > cstar.m3u8
           sleep 15
