--- a/.github/workflows/motion.yml
+++ b/.github/workflows/motion.yml
@@ -35,15 +35,15 @@ jobs:
       - name: actualisation des flux
         run: |
           pwd
-          python3 motion.py "http://s2.callofliberty.fr/direct/LEQUIPE/manifest.m3u8" > lequipe.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directlive/LEQUIPE/master.m3u8" > lequipe.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/LCP/manifest.m3u8" > lcp.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directlive/LCP/master.m3u8" > lcp.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/C8/index.m3u8" > c8.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directlive/C8/manifest.m3u8" > c8.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/CSTAR/index.m3u8" > cstar.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directlive/CSTAR/manifest.m3u8" > cstar.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/PublicSenat/master.m3u8" > senat.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directlive/PublicSenat/master.m3u8" > senat.m3u8
          
           
         
