--- a/.github/workflows/motion.yml
+++ b/.github/workflows/motion.yml
@@ -35,15 +35,15 @@ jobs:
       - name: actualisation des flux
         run: |
           pwd
-          python3 motion.py "http://s2.callofliberty.fr/direct/LEQUIPE/master.m3u8" > lequipe.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directcol/LEQUIPE/master.m3u8" > lequipe.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/LCP/master.m3u8" > lcp.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directcol/LCP/master.m3u8" > lcp.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/C8/manifest.m3u8" > c8.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directcol/C8/manifest.m3u8" > c8.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/CSTAR/manifest.m3u8" > cstar.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directcol/CSTAR/manifest.m3u8" > cstar.m3u8
           sleep 15
-          python3 motion.py "http://s2.callofliberty.fr/direct/PublicSenat/master.m3u8" > senat.m3u8
+          python3 motion.py "http://s2.callofliberty.fr/directcol/PublicSenat/master.m3u8" > senat.m3u8
          
           
         
