--- a/.github/workflows/motion2.yml
+++ b/.github/workflows/motion2.yml
@@ -2,8 +2,8 @@ name: motion2
 
 # Actualisation du flux toutes les 3 heures à la 46ème minutes.
 on:
-  schedule:
-    - cron: '46 0/3 * * *'
+ # schedule:
+ #   - cron: '46 0/3 * * *'
 
   # Permet d'exécuter ce flux de travail manuellement à partir de l'onglet Actions
   workflow_dispatch:
